<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
	<string name="appName">Secret Box</string>
    <string name="aboutText">"\n© 2009 HERA Consulting Ltd.\nAll rights reserved.\n\nTerms of use at www.gnugu.com\n\nFor support contact\nsupport@gnugu.com"</string>
    <string name="aboutMenu">About</string>
	<!-- Displayed full screen when the user has no compartments -->
	<string name="noCompartments">"You don't have any compartments.\n\nTo add compartments, press <font fgcolor="#ffffffff"><b>Menu</b></font> and select <font fgcolor="#ffffffff"><b>New</b></font> to create a new compartment from scratch."</string>
	<string name="noMediaCard">This application requires media card to be ready. Please insert media card and start again.</string>
	<string name="newPassword">Type new password</string>
	<string name="newPasswordRepeat">Repeat new password</string>
	<string name="newSecretBoxText">This is the first time Secret Box is being used or data file is missing.\nPlease create a new password.</string>
	<string name="newSecretBoxTitle">New Secret Box</string>
    <string name="oldPassword">Type existing password</string>
    <string name="changePasswordText">Please type in existing and new password.</string>
	<string name="dbCorrupted">Database file is corrupted.\nPlease delete the file from media card and start over.</string>
	<string name="error">Error</string>
    <string name="delete">Delete</string>
	<string name="loginText">Login</string>
	<string name="password">Password</string>
    <string name="changePassword">Change password</string>
    <string name="passwordChanged">Password changed.</string>
	<string name="wrongPassword">Wrong password. Try again.</string>
    <string name="wrongOldPassword">Existing password is wrong. Try again.</string>
	<string name="secretCount">(%d secrets)</string>
    <string name="insert">New</string>
    <string name="edit">Edit</string>
    <string name="compartmentCreated">New compartment created.</string>
    <string name="compartmentChanged">Compartment name changed.</string>
    <string name="compartmentDeleted">Compartment deleted.</string>
    <string name="cannotDeleteCopmartment">Cannot delete compartment while it still has secrets.</string>
    <string name="compartmentNameHint">Type compartment name</string>
    <string name="showSecrets">Show secrets</string>
    <string name="sort">Sort</string>
    <!-- Displayed full screen when compartment has no secrets.
         Because this is a format string we need to escape the HTML tags. -->
    <string name="noSecrets"><![CDATA["Your compartment <font color="#ffffff"><b>%s</b></font> has no secrets.<br/><br/>To add secrets, press <font color="#ffffff"><b>Menu</b></font> and select <font color="#ffffff"><b>New</b></font> to create a new secret from scratch."]]></string>
    <string name="deleteSecret"><![CDATA["<font color="#ffffff"><b>%s</b></font> will be deleted."]]></string>
    <string name="secretCreated">New secret created.</string>
    <string name="secretChanged">Secret changed.</string>
    <string name="secretDeleted">Secret deleted.</string>
    <string name="secretTitleHint">Type secret title</string>
    <string name="secretBodyHint">Type the secret</string>
    <string name="pictureCount">0 pictures</string>
    <string name="pictures">Pictures</string>
    <!-- Displayed full screen when secret has no images.
         Because this is a format string we need to escape the HTML tags. -->
    <string name="noPictures"><![CDATA["If you would like to add encrypted pictures to your secrets please purchase <font color="#ffffff"><b>Secret Box+</b></font>.<br/><br/>Visit www.gnugu.com/secret_box_plus for more details!"]]></string>    
    <string name="cannotAddPictures">Pictures cannot be added for a secret with no title. Edit the title first.</string>
    <string name="translationCreditsTitle"><b>Translation credits</b></string>
    <string name="translationCreditsBlurb">The translation of this application was carried out by:</string>
    <string name="translationCredits">Andreas Grunewald (German)\nDominique Hazael-Massieux (French)\nŠtefan Števko (Czech)\nMichal Pekarovič (Slovak)\nSilvia Pascale (Spanish)\nAndrey Sitnik (Russian)\nHiAPK.com (中文)\nMaarten Hulskemper (Nederlands)</string>
</resources>
