<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/aboutScroll" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:fillViewport="true">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">
		<TextView android:id="@+id/aboutText" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/aboutText"
			android:textSize="15sp" android:textColor="?android:attr/textColorSecondary"
			android:paddingLeft="10dip" android:paddingRight="10dip"
			android:paddingTop="10dip" android:lineSpacingMultiplier="0.92"
			android:autoLink="all" />
		<TextView android:id="@+id/translationCreditsTitle" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/translationCreditsTitle"
			android:textSize="15sp" android:textColor="?android:attr/textColorSecondary"
			android:paddingLeft="10dip" android:paddingRight="10dip"
			android:paddingTop="30dip" android:lineSpacingMultiplier="0.92"
			android:autoLink="all" />
		<TextView android:id="@+id/translationCreditsBlurb" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/translationCreditsBlurb"
			android:textSize="15sp" android:textColor="?android:attr/textColorSecondary"
			android:paddingLeft="10dip" android:paddingRight="10dip"
			android:paddingTop="5dip"
			android:lineSpacingMultiplier="0.92"
			android:autoLink="all" />
		<TextView android:id="@+id/translationCredits" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/translationCredits"
			android:textSize="15sp" android:textColor="?android:attr/textColorSecondary"
			android:paddingLeft="10dip" android:paddingRight="10dip"
			android:paddingTop="3dip"
			android:lineSpacingMultiplier="0.92"
			android:autoLink="all" />
	</LinearLayout>
</ScrollView>