<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:paddingLeft="3dip"
	android:paddingRight="3dip" android:paddingBottom="3dip"
	android:paddingTop="3dip">

	<EditText android:id="@+id/secretTitle" android:singleLine="true"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:autoText="true" android:capitalize="sentences"
		android:linksClickable="true" android:selectAllOnFocus="false"
		android:hint="@string/secretTitleHint" />

	<EditText android:id="@+id/secretBody" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:linksClickable="true"
		android:selectAllOnFocus="false" android:hint="@string/secretBodyHint"
		android:gravity="top" android:fadingEdge="vertical"
		android:scrollbars="vertical" android:layout_marginBottom="25dip"/>

	<TextView android:id="@+id/pictureCount"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:text="@string/pictureCount" android:textSize="12sp"
		android:layout_marginTop="-25dip" android:layout_marginLeft="5dip" android:layout_marginRight="5dip"/>

</LinearLayout>
